TM-47: Fixed column alignment for sliding element only

--- a/src/themes/mobile/src/main/css/toolstrip/context-toolbar.less
+++ b/src/themes/mobile/src/main/css/toolstrip/context-toolbar.less
@@ -9,6 +9,10 @@
   flex: 1;
   }
 
+  .tinymce-mobile-serializer-wrapper {
+    flex-direction: column;
+  }
+
   .mixin-flex-bar;
   flex: 1;
   padding-top: 0.4em;
@@ -27,7 +31,6 @@
   .tinymce-mobile-toolbar-group-item {
     display: flex;
     align-items: center;
-    flex-direction: column;
   }
 
   .tinymce-mobile-dot-container {
